[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qsm"
version = "0.1.0"
description = "A Queued State Machine Implementation for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qsm"]
