[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qstate"
version = "1.1.0"
description = "A Queued State Machine Implementation for Python"
authors = [
    {name = "Aaron Jencks", email = "aaronjencks@gmail.com"}
]
maintainers = [
    {name = "Aaron Jencks", email = "aaronjencks@gmail.com"}
]
keywords = [
    "state-machine", "queue", "queued state machine", "state machine", "queued state-machine"
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2,<3"
]

[project.urls]
Repository = "https://github.com/aaron-jencks/qsm.git"
Issues = "https://github.com/aaron-jencks/qsm/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qsm"]
